--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,5 +1,5 @@
 # default configuration
-baseURL = "http://demo.gethugothemes.com/kross/"
+baseURL = "https://aindata.netlify.app/"
 languageCode = "en-us"
 summaryLength = "10"
 theme = "kross-hugo"
