--- a/exampleSite/.forestry/settings.yml
+++ b/exampleSite/.forestry/settings.yml
@@ -8,7 +8,7 @@ sections:
   label: Blog Post
 - type: directory
   path: exampleSite/content/english/blog
-  label: Post (en)
+  label: Post 
   create: documents
   match: "**/*"
   new_doc_ext: '20191203072044'
